refactor: update deviceData class to strongly type fields, don't allow storing new fields w/o data model update (#432)